# ClawChain

./: .gitignore  DEVELOPER.md  README.md  README.zh-CN.md  foundry.toml  pyproject.toml  requirements.txt  run_clawchain_ui.cmd  run_clawchain_ui.sh  setup_clawchain.cmd  setup_clawchain.ps1  setup_clawchain.sh
clawchain/: __init__.py  agent_profiles.py  agent_proxy.py  agent_proxy_cli.py  agent_proxy_config.py  agent_proxy_daemon.py  bridge.py  codex_integration.py  codex_rollout.py  codex_rollout_monitor.py  host_monitor.py  platform_support.py  real_agent_harness.py  risk_catalog.py  runtime_cli.py  session_state.py  shell_agent_integration.py  system.py  ui_server.py
clawchain/audit/: __init__.py  claims.py  cli.py  signals.py  verifier.py
clawchain/canonical/: __init__.py  attestations.py  commitments.py  events.py  ids.py  sidecar.py
clawchain/capture/: __init__.py  claims.py
clawchain/configs/: supported_agents.json
clawchain/runtime/: __init__.py  anchor.py  anchor_service_utils.py  batching.py  bus.py  delegation_anchor.py  evidence_bundle.py  openclaw.py  policy.py  protected_backup.py  recovery.py  remote.py  service.py  sidecar.py  sidecar_service.py  store.py
contracts/: CommitmentAnchor.abi.json  CommitmentAnchor.sol
demo/dangerous-ops-smoke/: README.md  (+4 more)
scripts/: dangerous_ops_smoke.py  deploy_commitment_anchor.sh  platform_smoke.py  run_dangerous_ops_smoke.ps1  run_evm_smoke.sh  run_linux_smoke.sh  run_windows_smoke.cmd  run_windows_smoke.ps1  smoke_claude_adapter.py  start_local_devnet.sh
smoke-results/: smoke-report.json  smoke-report.txt
(+2 files in other folders)
